[package]
name = "p2p-probe"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { version = "0.56", features = [
    "dns",
    "dcutr",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "quic",
    "relay",
    "rsa",
    "tcp",
    "tokio",
    "yamux",
] }

[profile.release]
lto = "thin"
